overflow fix

--- a/s.css
+++ b/s.css
@@ -2,7 +2,7 @@ html {
 	margin: 0;
 	padding: 0;
 	font-family: Helvetica, sans-serif;
-	
+	overflow-x: hidden;
 }
 
 body {
@@ -101,6 +101,7 @@ a, a:visited, a:active, a:link, a:default, a:hover {
 		}
 		.col {
 		  flex: 1;
+		  overflow: clip;
 		}
 	}
 
